--- a/game/languages/Català.ini
+++ b/game/languages/Català.ini
@@ -423,7 +423,6 @@ SONG_MENU_CLOSE_CATEGORY=Tanca la categoria
 SONG_SEARCH_DESC=Què vols cantar ara?
 
 PARTY_MODE=Mode festa
-PARTY_DIFFICULTY=Dificultat
 PARTY_PLAYLIST=Mode de reproducció
 PARTY_PLAYLIST_ALL=Tot
 PARTY_PLAYLIST_CATEGORY=Carpeta
@@ -673,6 +672,7 @@ C_CONTINUE=Continuar
 C_CREATEDBY=Creat per
 
 ;TODO: C_DELETE_USER=Delete user
+C_DIFFICULTY=Dificultat
 C_DUET=Duet
 C_DUETS=Duets
 
