--- a/game/languages/Dansk.ini
+++ b/game/languages/Dansk.ini
@@ -423,7 +423,6 @@ SONG_MENU_DELETE_SONG=Slet Sang
 ;TODO: SONG_SEARCH_DESC=What do you want to sing now?
 
 PARTY_MODE=Fest modus
-PARTY_DIFFICULTY=Sværhedsgrad
 PARTY_PLAYLIST=Afspilningsliste modus
 PARTY_PLAYLIST_ALL=Alle sange
 PARTY_PLAYLIST_CATEGORY=Mappe
@@ -671,6 +670,7 @@ C_COLOR_YELLOW=Gul
 ;TODO: C_CREATEDBY=Created by
 
 ;TODO: C_DELETE_USER=Delete user
+C_DIFFICULTY=Sværhedsgrad
 ;TODO: C_DUET=Duet
 ;TODO: C_DUETS=Duets
 
