--- a/game/languages/Eesti keel.ini
+++ b/game/languages/Eesti keel.ini
@@ -423,7 +423,6 @@ SONG_MENU_CLOSE_CATEGORY=Sulge kategooria
 SONG_SEARCH_DESC=Mida sooviksid nüüd laulda?
 
 PARTY_MODE=Peo režiim
-PARTY_DIFFICULTY=Raskustase
 PARTY_PLAYLIST=Esitusloendi režiim
 PARTY_PLAYLIST_ALL=Kõik laulud
 PARTY_PLAYLIST_CATEGORY=Kaust
@@ -673,6 +672,7 @@ C_CONTINUE=Jätka
 C_CREATEDBY=Koostatud
 
 ;TODO: C_DELETE_USER=Delete user
+C_DIFFICULTY=Raskustase
 C_DUET=Duett
 C_DUETS=Duettid
 
