--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -423,7 +423,6 @@ SONG_MENU_CLOSE_CATEGORY=Close category
 SONG_SEARCH_DESC=What do you want to sing now?
 
 PARTY_MODE=Party mode
-PARTY_DIFFICULTY=Difficulty
 PARTY_PLAYLIST=Playlist Mode
 PARTY_PLAYLIST_ALL=All songs
 PARTY_PLAYLIST_CATEGORY=Folder
@@ -673,6 +672,7 @@ C_CONTINUE=Continue
 C_CREATEDBY=Created by
 
 C_DELETE_USER=Delete user
+C_DIFFICULTY=Difficulty
 C_DUET=Duet
 C_DUETS=Duets
 
