--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -423,7 +423,6 @@ SONG_MENU_CLOSE_CATEGORY=Cerrar categoria
 SONG_SEARCH_DESC=¿Qué quieres cantar ahora?
 
 PARTY_MODE=Modo fiesta
-PARTY_DIFFICULTY=Dificultad
 PARTY_PLAYLIST=Modo lista
 PARTY_PLAYLIST_ALL=Todo
 PARTY_PLAYLIST_CATEGORY=Carpeta
@@ -671,6 +670,7 @@ C_CONTINUE=Continuar
 C_CREATEDBY=Creado por
 
 C_DELETE_USER=Borrar usuario
+C_DIFFICULTY=Dificultad
 C_DUET=Dueto
 C_DUETS=Duetos
 
