--- a/game/languages/Euskara.ini
+++ b/game/languages/Euskara.ini
@@ -423,7 +423,6 @@ SONG_MENU_DELETE_SONG=Zerrendatik ezabatu
 ;TODO: SONG_SEARCH_DESC=What do you want to sing now?
 
 PARTY_MODE=Taldean Abestu
-PARTY_DIFFICULTY=Zailtasuna
 PARTY_PLAYLIST=Abestiak
 PARTY_PLAYLIST_ALL=Guztiak
 PARTY_PLAYLIST_CATEGORY=Karpeta
@@ -671,6 +670,7 @@ C_COLOR_YELLOW=Horia
 ;TODO: C_CREATEDBY=Created by
 
 ;TODO: C_DELETE_USER=Delete user
+C_DIFFICULTY=Zailtasuna
 ;TODO: C_DUET=Duet
 ;TODO: C_DUETS=Duets
 
