--- a/game/languages/Hrvatski.ini
+++ b/game/languages/Hrvatski.ini
@@ -423,7 +423,6 @@ SONG_MENU_DELETE_SONG=Izbriši Pjesmu
 ;TODO: SONG_SEARCH_DESC=What do you want to sing now?
 
 PARTY_MODE=Party mod
-PARTY_DIFFICULTY=Težina
 PARTY_PLAYLIST=Playlist Mod
 PARTY_PLAYLIST_ALL=Sve pjesme
 PARTY_PLAYLIST_CATEGORY=Folder
@@ -671,6 +670,7 @@ C_COLOR_YELLOW=Žuta boja
 ;TODO: C_CREATEDBY=Created by
 
 ;TODO: C_DELETE_USER=Delete user
+C_DIFFICULTY=Težina
 ;TODO: C_DUET=Duet
 ;TODO: C_DUETS=Duets
 
