--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -423,7 +423,6 @@ SONG_MENU_CLOSE_CATEGORY=Chiudi categoria
 SONG_SEARCH_DESC=Cosa vuoi cantare adesso?
 
 PARTY_MODE=Modalità party
-PARTY_DIFFICULTY=Difficoltà
 PARTY_PLAYLIST=Modalità Playlist
 PARTY_PLAYLIST_ALL=Tutte le Canzoni
 PARTY_PLAYLIST_CATEGORY=Cartella
@@ -671,6 +670,7 @@ C_COLOR_YELLOW=Giallo
 ;TODO: C_CREATEDBY=Created by
 
 ;TODO: C_DELETE_USER=Delete user
+C_DIFFICULTY=Difficoltà
 ;TODO: C_DUET=Duet
 ;TODO: C_DUETS=Duets
 
