--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -423,7 +423,6 @@ SONG_MENU_CLOSE_CATEGORY=Kategória bezárása
 ;TODO: SONG_SEARCH_DESC=What do you want to sing now?
 
 PARTY_MODE=Buli mód
-PARTY_DIFFICULTY=Nehézségi Szint
 PARTY_PLAYLIST=Számlista mód
 PARTY_PLAYLIST_ALL=Minden dal
 PARTY_PLAYLIST_CATEGORY=Mappa
@@ -671,6 +670,7 @@ C_COLOR_YELLOW=Sárga
 ;TODO: C_CREATEDBY=Created by
 
 ;TODO: C_DELETE_USER=Delete user
+C_DIFFICULTY=Nehézségi Szint
 ;TODO: C_DUET=Duet
 ;TODO: C_DUETS=Duets
 
