--- a/game/languages/Polski.ini
+++ b/game/languages/Polski.ini
@@ -423,7 +423,6 @@ SONG_MENU_CLOSE_CATEGORY=Zamknij kategorię
 SONG_SEARCH_DESC=Co chcesz teraz zaśpiewać?
 
 PARTY_MODE=Tryb imprezy
-PARTY_DIFFICULTY=Poziom
 PARTY_PLAYLIST=Tryb playlisty
 PARTY_PLAYLIST_ALL=Wszystkie piosenki
 PARTY_PLAYLIST_CATEGORY=Folder
@@ -671,6 +670,7 @@ C_COLOR_YELLOW=Żółty
 ;TODO: C_CREATEDBY=Created by
 
 ;TODO: C_DELETE_USER=Delete user
+C_DIFFICULTY=Poziom
 ;TODO: C_DUET=Duet
 ;TODO: C_DUETS=Duets
 
