--- a/game/languages/Slovenský.ini
+++ b/game/languages/Slovenský.ini
@@ -423,7 +423,6 @@ SONG_MENU_CLOSE_CATEGORY=Zatvoriť kategóriu
 SONG_SEARCH_DESC=Čo si chcete zaspievať teraz?
 
 PARTY_MODE=Párty mód
-PARTY_DIFFICULTY=Obtiažnosť
 PARTY_PLAYLIST=Skladby z playlistu
 PARTY_PLAYLIST_ALL=Všetky skladby
 PARTY_PLAYLIST_CATEGORY=Kategória
@@ -671,6 +670,7 @@ C_CONTINUE=Pokračovať
 C_CREATEDBY=Vytvoril(a)
 
 ;TODO: C_DELETE_USER=Delete user
+C_DIFFICULTY=Obtiažnosť
 C_DUET=Duet
 C_DUETS=Duety
 
