--- a/game/languages/Svenska.ini
+++ b/game/languages/Svenska.ini
@@ -423,7 +423,6 @@ SONG_MENU_DELETE_SONG=Ta bort låt
 ;TODO: SONG_SEARCH_DESC=What do you want to sing now?
 
 PARTY_MODE=partyläge
-PARTY_DIFFICULTY=Svårighetsnivå
 PARTY_PLAYLIST=Spellistläge
 PARTY_PLAYLIST_ALL=Alla låtar
 PARTY_PLAYLIST_CATEGORY=Mapp
@@ -671,6 +670,7 @@ C_COLOR_YELLOW=Gul
 ;TODO: C_CREATEDBY=Created by
 
 ;TODO: C_DELETE_USER=Delete user
+C_DIFFICULTY=Svårighetsnivå
 ;TODO: C_DUET=Duet
 ;TODO: C_DUETS=Duets
 
