--- a/game/languages/Íslenska.ini
+++ b/game/languages/Íslenska.ini
@@ -423,7 +423,6 @@ SONG_MENU_DELETE_SONG=Eyða lagi
 ;TODO: SONG_SEARCH_DESC=What do you want to sing now?
 
 PARTY_MODE=Partísnið
-PARTY_DIFFICULTY=Erfiðleikastig
 PARTY_PLAYLIST=Lagalista Stilling
 PARTY_PLAYLIST_ALL=Öll lög
 PARTY_PLAYLIST_CATEGORY=Mappa
@@ -671,6 +670,7 @@ C_COLOR_YELLOW=Gulur
 ;TODO: C_CREATEDBY=Created by
 
 ;TODO: C_DELETE_USER=Delete user
+C_DIFFICULTY=Erfiðleikastig
 ;TODO: C_DUET=Duet
 ;TODO: C_DUETS=Duets
 
