--- a/game/languages/Ελληνικά.ini
+++ b/game/languages/Ελληνικά.ini
@@ -423,7 +423,6 @@ SONG_MENU_DELETE_SONG=Διέγραψε τραγούδι
 SONG_SEARCH_DESC=Что ты хочешь спеть сейчас?
 
 PARTY_MODE=Είδος παιχνιδιού "Πάρτυ"
-PARTY_DIFFICULTY=Δυσκολία
 PARTY_PLAYLIST=Παίξε με μία λίστα
 PARTY_PLAYLIST_ALL=Όλα τα τραγούδια
 PARTY_PLAYLIST_CATEGORY=Φάκελος
@@ -671,6 +670,7 @@ C_COLOR_YELLOW=Κίτρινος
 ;TODO: C_CREATEDBY=Created by
 
 ;TODO: C_DELETE_USER=Delete user
+C_DIFFICULTY=Δυσκολία
 ;TODO: C_DUET=Duet
 ;TODO: C_DUETS=Duets
 
