--- a/game/languages/日本語.ini
+++ b/game/languages/日本語.ini
@@ -423,7 +423,6 @@ SONG_MENU_DELETE_SONG=曲を消す
 SONG_SEARCH_DESC=今、何を歌いたいのか？
 
 PARTY_MODE=パーティー・モード
-PARTY_DIFFICULTY=面倒
 PARTY_PLAYLIST=曲順・モード
 PARTY_PLAYLIST_ALL=全曲
 PARTY_PLAYLIST_CATEGORY=フォルダー
@@ -671,6 +670,7 @@ C_COLOR=色
 ;TODO: C_CREATEDBY=Created by
 
 ;TODO: C_DELETE_USER=Delete user
+C_DIFFICULTY=面倒
 ;TODO: C_DUET=Duet
 ;TODO: C_DUETS=Duets
 
