--- a/game/languages/普通话.ini
+++ b/game/languages/普通话.ini
@@ -423,7 +423,6 @@ SONG_MENU_DELETE_SONG=删除歌曲
 SONG_SEARCH_DESC=你现在想唱什么？
 
 PARTY_MODE=派对模式
-PARTY_DIFFICULTY=难度
 PARTY_PLAYLIST=列表模式
 PARTY_PLAYLIST_ALL=所有歌曲
 PARTY_PLAYLIST_CATEGORY=文件夹
@@ -671,6 +670,7 @@ C_COLOR_YELLOW=黄
 ;TODO: C_CREATEDBY=Created by
 
 ;TODO: C_DELETE_USER=Delete user
+C_DIFFICULTY=难度
 ;TODO: C_DUET=Duet
 ;TODO: C_DUETS=Duets
 
