--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -423,7 +423,6 @@ SONG_MENU_CLOSE_CATEGORY=Fermer la catégorie
 SONG_SEARCH_DESC=Que voulez-vous chanter maintenant?
 
 PARTY_MODE=Mode fête
-PARTY_DIFFICULTY=Difficulté
 PARTY_PLAYLIST=Playlist
 PARTY_PLAYLIST_ALL=Toutes les chansons
 PARTY_PLAYLIST_CATEGORY=Dossier
@@ -671,6 +670,7 @@ C_CONTINUE=Continuer
 C_CREATEDBY=Créée par
 
 ;TODO: C_DELETE_USER=Delete user
+C_DIFFICULTY=Difficulté
 C_DUET=Duo
 C_DUETS=Duos
 
