--- a/game/languages/Lietuvių.ini
+++ b/game/languages/Lietuvių.ini
@@ -423,7 +423,6 @@ SONG_MENU_SONG=Daina
 ;TODO: SONG_SEARCH_DESC=What do you want to sing now?
 
 ;TODO: PARTY_MODE=Party mode
-;TODO: PARTY_DIFFICULTY=Difficulty
 ;TODO: PARTY_PLAYLIST=Playlist Mode
 ;TODO: PARTY_PLAYLIST_ALL=All songs
 PARTY_PLAYLIST_CATEGORY=Aplankas
@@ -671,6 +670,7 @@ C_COLOR_YELLOW=Geltonas
 ;TODO: C_CREATEDBY=Created by
 
 ;TODO: C_DELETE_USER=Delete user
+;TODO: C_DIFFICULTY=Difficulty
 ;TODO: C_DUET=Duet
 ;TODO: C_DUETS=Duets
 
