--- a/game/languages/Pу́сский.ini
+++ b/game/languages/Pу́сский.ini
@@ -423,7 +423,6 @@ SONG_MENU_DELETE_SONG=Удалить песню
 ;TODO: SONG_SEARCH_DESC=What do you want to sing now?
 
 PARTY_MODE=режим вечеринки
-PARTY_DIFFICULTY=Сложность
 PARTY_PLAYLIST=Режим плэйлиста
 PARTY_PLAYLIST_ALL=Все песни
 PARTY_PLAYLIST_CATEGORY=Папка
@@ -671,6 +670,7 @@ C_COLOR=Цвет
 ;TODO: C_CREATEDBY=Created by
 
 ;TODO: C_DELETE_USER=Delete user
+C_DIFFICULTY=Сложность
 ;TODO: C_DUET=Duet
 ;TODO: C_DUETS=Duets
 
