--- a/game/languages/Slovenščina.ini
+++ b/game/languages/Slovenščina.ini
@@ -423,7 +423,6 @@ SONG_MENU_DELETE_SONG=Izbriši pesem
 ;TODO: SONG_SEARCH_DESC=What do you want to sing now?
 
 PARTY_MODE=Zabava
-PARTY_DIFFICULTY=Težavnost
 PARTY_PLAYLIST=Izbor
 PARTY_PLAYLIST_ALL=Vse pesmi
 PARTY_PLAYLIST_CATEGORY=Mapa
@@ -671,6 +670,7 @@ C_COLOR_YELLOW=Rumena
 ;TODO: C_CREATEDBY=Created by
 
 ;TODO: C_DELETE_USER=Delete user
+C_DIFFICULTY=Težavnost
 ;TODO: C_DUET=Duet
 ;TODO: C_DUETS=Duets
 
