--- a/game/languages/Čeština.ini
+++ b/game/languages/Čeština.ini
@@ -423,7 +423,6 @@ SONG_MENU_DELETE_SONG=Odebrat skladbu
 ;TODO: SONG_SEARCH_DESC=What do you want to sing now?
 
 PARTY_MODE=Párty mód
-PARTY_DIFFICULTY=Obtížnost
 PARTY_PLAYLIST=Mód seznamu stop
 PARTY_PLAYLIST_ALL=Všechny skladby
 PARTY_PLAYLIST_CATEGORY=Složka
@@ -671,6 +670,7 @@ C_COLOR_YELLOW=Žlutá
 ;TODO: C_CREATEDBY=Created by
 
 ;TODO: C_DELETE_USER=Delete user
+C_DIFFICULTY=Obtížnost
 ;TODO: C_DUET=Duet
 ;TODO: C_DUETS=Duets
 
