--- a/game/languages/Српски.ini
+++ b/game/languages/Српски.ini
@@ -423,7 +423,6 @@ SONG_MENU_DELETE_SONG=Obrisi Pesmu
 ;TODO: SONG_SEARCH_DESC=What do you want to sing now?
 
 PARTY_MODE=Timski mod
-PARTY_DIFFICULTY=Tezina
 PARTY_PLAYLIST=Mod Liste Pesama
 PARTY_PLAYLIST_ALL=Sve Pesme
 PARTY_PLAYLIST_CATEGORY=Direktorijum
@@ -671,6 +670,7 @@ C_COLOR_YELLOW=Жута
 ;TODO: C_CREATEDBY=Created by
 
 ;TODO: C_DELETE_USER=Delete user
+C_DIFFICULTY=Tezina
 ;TODO: C_DUET=Duet
 ;TODO: C_DUETS=Duets
 
