redesigned party summary

--- a/game/languages/Català.ini
+++ b/game/languages/Català.ini
@@ -458,7 +458,7 @@ PARTY_WIN_LEGEND_CONTINUE=Tornar al menú principal
 
 PARTY_ROUND=Ronda
 PARTY_ROUND_WINNER=Guanyador
-PARTY_NOTPLAYEDYET=No s'ha jugat encara
+;TODO: PARTY_NOTPLAYEDYET=To be determined
 PARTY_NOBODY=Ningú
 NEXT_ROUND=Següent ronda:
 
