--- a/game/languages/Dansk.ini
+++ b/game/languages/Dansk.ini
@@ -458,7 +458,7 @@ PARTY_WIN_LEGEND_CONTINUE=Tilbage til Hoved Menuen
 
 PARTY_ROUND=Runde
 PARTY_ROUND_WINNER=vinder
-PARTY_NOTPLAYEDYET=Ikke spillet endnu
+;TODO: PARTY_NOTPLAYEDYET=To be determined
 PARTY_NOBODY=Ingen
 NEXT_ROUND=Næste Runde:
 
