--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -458,7 +458,7 @@ PARTY_WIN_LEGEND_CONTINUE=Zurück zum Hauptmenü
 
 PARTY_ROUND=Runde
 PARTY_ROUND_WINNER=Sieger
-PARTY_NOTPLAYEDYET=Noch nicht gespielt
+;TODO: PARTY_NOTPLAYEDYET=To be determined
 PARTY_NOBODY=Niemand
 NEXT_ROUND=Nächste Runde:
 
