--- a/game/languages/Eesti keel.ini
+++ b/game/languages/Eesti keel.ini
@@ -458,7 +458,7 @@ PARTY_WIN_LEGEND_CONTINUE=Tagasi peamenüüsse
 
 PARTY_ROUND=Ring
 PARTY_ROUND_WINNER=Võitja
-PARTY_NOTPLAYEDYET=Pole veel mängitud
+;TODO: PARTY_NOTPLAYEDYET=To be determined
 PARTY_NOBODY=Mitte keegi
 NEXT_ROUND=Järgmine ring:
 
