--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -458,7 +458,7 @@ PARTY_WIN_LEGEND_CONTINUE=Back to main-menu
 
 PARTY_ROUND=Round
 PARTY_ROUND_WINNER=Winner
-PARTY_NOTPLAYEDYET=Not played yet
+PARTY_NOTPLAYEDYET=To be determined
 PARTY_NOBODY=Nobody
 NEXT_ROUND=Next round:
 
