--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -458,7 +458,7 @@ PARTY_WIN_LEGEND_CONTINUE=Al menú principal
 
 PARTY_ROUND=Ronda
 PARTY_ROUND_WINNER=Ganador
-PARTY_NOTPLAYEDYET=Aún no jugado
+PARTY_NOTPLAYEDYET=Por determinar
 PARTY_NOBODY=Nadie
 NEXT_ROUND=Siguiente ronda:
 
