--- a/game/languages/Euskara.ini
+++ b/game/languages/Euskara.ini
@@ -458,7 +458,7 @@ PARTY_WIN_LEGEND_CONTINUE=Menu nagusira itzuli
 
 PARTY_ROUND=Erronda
 PARTY_ROUND_WINNER=Irabazlea
-PARTY_NOTPLAYEDYET=Jokatu gabe
+;TODO: PARTY_NOTPLAYEDYET=To be determined
 PARTY_NOBODY=Inor
 NEXT_ROUND=Hurrengo erronda:
 
