--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -458,7 +458,7 @@ PARTY_WIN_LEGEND_CONTINUE=Retour au menu principal
 
 PARTY_ROUND=Manche
 PARTY_ROUND_WINNER=Gagnant
-PARTY_NOTPLAYEDYET=-
+PARTY_NOTPLAYEDYET=À déterminer
 PARTY_NOBODY=Personne ne
 NEXT_ROUND=Manche suivante :
 
