--- a/game/languages/Galego.ini
+++ b/game/languages/Galego.ini
@@ -458,7 +458,7 @@ PARTY_WIN_LEGEND_CONTINUE=Ó menu principal
 
 PARTY_ROUND=Rolda
 PARTY_ROUND_WINNER=Gañador
-PARTY_NOTPLAYEDYET=Ainda non xogado
+;TODO: PARTY_NOTPLAYEDYET=To be determined
 PARTY_NOBODY=Ninguén
 NEXT_ROUND=Seguente rolda:
 
