--- a/game/languages/Gàidhlig.ini
+++ b/game/languages/Gàidhlig.ini
@@ -458,7 +458,7 @@ PARTY_WIN_LEGEND_CONTINUE=Till dhan phrìomh chlàr-taice
 
 PARTY_ROUND=Cuairt
 PARTY_ROUND_WINNER=Buannaiche
-PARTY_NOTPLAYEDYET=Ri teachd
+;TODO: PARTY_NOTPLAYEDYET=To be determined
 PARTY_NOBODY=Gun neach sam bith
 NEXT_ROUND=An ath-chuairt:
 
