--- a/game/languages/Hrvatski.ini
+++ b/game/languages/Hrvatski.ini
@@ -458,7 +458,7 @@ PARTY_WIN_LEGEND_CONTINUE=Natrag na glavni meni
 
 PARTY_ROUND=Runda
 PARTY_ROUND_WINNER=Pobjednik
-PARTY_NOTPLAYEDYET=Nije još odigr.
+;TODO: PARTY_NOTPLAYEDYET=To be determined
 PARTY_NOBODY=Nitko ni
 NEXT_ROUND=Sljed. runda:
 
