--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -458,7 +458,7 @@ PARTY_WIN_LEGEND_CONTINUE=Torna al menu principale
 
 PARTY_ROUND=Sfida
 PARTY_ROUND_WINNER=Vincitore
-PARTY_NOTPLAYEDYET=Non ancora giocata
+;TODO: PARTY_NOTPLAYEDYET=To be determined
 PARTY_NOBODY=Pareggio
 NEXT_ROUND=Prossima sfida:
 
