--- a/game/languages/Lietuvių.ini
+++ b/game/languages/Lietuvių.ini
@@ -458,7 +458,7 @@ OPTION_VALUE_OPEN_MENU=Atidarykite meniu
 
 ;TODO: PARTY_ROUND=Round
 PARTY_ROUND_WINNER=Nugalėtojas
-;TODO: PARTY_NOTPLAYEDYET=Not played yet
+;TODO: PARTY_NOTPLAYEDYET=To be determined
 PARTY_NOBODY=Niekas
 ;TODO: NEXT_ROUND=Next round:
 
