--- a/game/languages/Lëtzebuergesch.ini
+++ b/game/languages/Lëtzebuergesch.ini
@@ -458,7 +458,7 @@ PARTY_WIN_LEGEND_CONTINUE=Zeréck am Haaptmenü
 
 PARTY_ROUND=Ronn
 PARTY_ROUND_WINNER=Gewënner
-PARTY_NOTPLAYEDYET=-
+;TODO: PARTY_NOTPLAYEDYET=To be determined
 PARTY_NOBODY=Keen
 NEXT_ROUND=Nächst Ronn:
 
