--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -458,7 +458,7 @@ PARTY_WIN_LEGEND_CONTINUE=Vissza a főmenübe
 
 PARTY_ROUND=Forduló
 PARTY_ROUND_WINNER=Nyertes
-;TODO: PARTY_NOTPLAYEDYET=Not played yet
+;TODO: PARTY_NOTPLAYEDYET=To be determined
 PARTY_NOBODY=Senki
 NEXT_ROUND=Következő menet:
 
