--- a/game/languages/Nederlands.ini
+++ b/game/languages/Nederlands.ini
@@ -458,7 +458,7 @@ PARTY_WIN_LEGEND_CONTINUE=Terug naar het hoofdmenu
 
 PARTY_ROUND=Ronde
 PARTY_ROUND_WINNER=Winnaar
-PARTY_NOTPLAYEDYET=Nog niet gespeeld
+;TODO: PARTY_NOTPLAYEDYET=To be determined
 PARTY_NOBODY=Niemand
 NEXT_ROUND=Volgende Ronde:
 
