--- a/game/languages/Norsk.ini
+++ b/game/languages/Norsk.ini
@@ -458,7 +458,7 @@ PARTY_WIN_LEGEND_CONTINUE=Tilbake til hovedmenyen
 
 PARTY_ROUND=Runde
 PARTY_ROUND_WINNER=Vinner
-PARTY_NOTPLAYEDYET=Ikke spilt ennå
+;TODO: PARTY_NOTPLAYEDYET=To be determined
 PARTY_NOBODY=Ingen
 NEXT_ROUND=Neste runde:
 
