--- a/game/languages/Polski.ini
+++ b/game/languages/Polski.ini
@@ -458,7 +458,7 @@ PARTY_WIN_LEGEND_CONTINUE=Do menu głównego
 
 PARTY_ROUND=Runda
 PARTY_ROUND_WINNER=Zwycięzca
-PARTY_NOTPLAYEDYET=Jeszcze nie grał
+;TODO: PARTY_NOTPLAYEDYET=To be determined
 PARTY_NOBODY=Nikt
 NEXT_ROUND=Następna runda:
 
