--- a/game/languages/Português.ini
+++ b/game/languages/Português.ini
@@ -458,7 +458,7 @@ PARTY_WIN_LEGEND_CONTINUE=Voltar ao Menu Principal
 
 PARTY_ROUND=Ronda
 PARTY_ROUND_WINNER=Vencedor
-PARTY_NOTPLAYEDYET=Não tocada
+;TODO: PARTY_NOTPLAYEDYET=To be determined
 PARTY_NOBODY=Ninguém
 NEXT_ROUND=Ronda seguinte:
 
