--- a/game/languages/Pу́сский.ini
+++ b/game/languages/Pу́сский.ini
@@ -458,7 +458,7 @@ PARTY_WIN_LEGEND_CONTINUE=вернуться в главное меню
 
 PARTY_ROUND=Раунд
 PARTY_ROUND_WINNER=Победитель
-PARTY_NOTPLAYEDYET=ещё не играли
+;TODO: PARTY_NOTPLAYEDYET=To be determined
 PARTY_NOBODY=никто
 NEXT_ROUND=Следующий раунд:
 
