--- a/game/languages/Română.ini
+++ b/game/languages/Română.ini
@@ -458,7 +458,7 @@ PARTY_WIN_LEGEND_CONTINUE=înapoi la meniul principal
 
 PARTY_ROUND=Runda
 PARTY_ROUND_WINNER=Câştigător
-PARTY_NOTPLAYEDYET=Nejucat încă
+;TODO: PARTY_NOTPLAYEDYET=To be determined
 PARTY_NOBODY=Nimeni
 NEXT_ROUND=Urmatoarea rundă:
 
