--- a/game/languages/Slovenský.ini
+++ b/game/languages/Slovenský.ini
@@ -458,7 +458,7 @@ PARTY_WIN_LEGEND_CONTINUE=Späť do hlavného menu
 
 PARTY_ROUND=Kolo
 PARTY_ROUND_WINNER=Víťaz
-PARTY_NOTPLAYEDYET=Ešte sa nehralo
+;TODO: PARTY_NOTPLAYEDYET=To be determined
 PARTY_NOBODY=Ani jeden tím
 NEXT_ROUND=Ďalšie kolo:
 
