--- a/game/languages/Slovenščina.ini
+++ b/game/languages/Slovenščina.ini
@@ -458,7 +458,7 @@ PARTY_WIN_LEGEND_CONTINUE=Nazaj k glavnemu meniju
 
 PARTY_ROUND=Runda
 PARTY_ROUND_WINNER=Zmagovalec
-PARTY_NOTPLAYEDYET=Neizvedeno
+;TODO: PARTY_NOTPLAYEDYET=To be determined
 PARTY_NOBODY=Nobeden
 NEXT_ROUND=Naslednja runda:
 
