--- a/game/languages/Suomi.ini
+++ b/game/languages/Suomi.ini
@@ -458,7 +458,7 @@ PARTY_WIN_LEGEND_CONTINUE=Takaisin edelliseen valikkoon
 
 PARTY_ROUND=Kierros
 PARTY_ROUND_WINNER=Voittaja
-PARTY_NOTPLAYEDYET=Ei laulettu vielä
+;TODO: PARTY_NOTPLAYEDYET=To be determined
 PARTY_NOBODY=Nimetön
 NEXT_ROUND=Seuraava kierros:
 
