--- a/game/languages/Svenska.ini
+++ b/game/languages/Svenska.ini
@@ -458,7 +458,7 @@ PARTY_WIN_LEGEND_CONTINUE=tillbaka till huvudmenyn
 
 PARTY_ROUND=Omgång
 PARTY_ROUND_WINNER=Vinnare
-PARTY_NOTPLAYEDYET=inte spelad än
+;TODO: PARTY_NOTPLAYEDYET=To be determined
 PARTY_NOBODY=ingen
 NEXT_ROUND=Nästa runda:
 
