--- a/game/languages/Íslenska.ini
+++ b/game/languages/Íslenska.ini
@@ -458,7 +458,7 @@ PARTY_WIN_LEGEND_CONTINUE=Aftur að aðalvalmynd
 
 PARTY_ROUND=Umferð
 PARTY_ROUND_WINNER=Sigurvegari
-PARTY_NOTPLAYEDYET=Ekki spilað enn
+;TODO: PARTY_NOTPLAYEDYET=To be determined
 PARTY_NOBODY=Enginn
 NEXT_ROUND=Næsta umferð:
 
