--- a/game/languages/Čeština.ini
+++ b/game/languages/Čeština.ini
@@ -458,7 +458,7 @@ PARTY_WIN_LEGEND_CONTINUE=Zpět do hlavního menu
 
 PARTY_ROUND=Kolo
 PARTY_ROUND_WINNER=Vítěz
-PARTY_NOTPLAYEDYET=Ještě se nehrálo
+;TODO: PARTY_NOTPLAYEDYET=To be determined
 PARTY_NOBODY=Nikdo
 NEXT_ROUND=Další kolo:
 
