--- a/game/languages/Ελληνικά.ini
+++ b/game/languages/Ελληνικά.ini
@@ -458,7 +458,7 @@ PARTY_WIN_LEGEND_CONTINUE=Επιστροφή στο κύριο μενού
 
 PARTY_ROUND=Γύρος
 PARTY_ROUND_WINNER=Νικητής
-PARTY_NOTPLAYEDYET=Δεν παίχτηκε ακόμη
+;TODO: PARTY_NOTPLAYEDYET=To be determined
 PARTY_NOBODY=Κανείς
 NEXT_ROUND=Επόμενος Γύρος:
 
