--- a/game/languages/Српски.ini
+++ b/game/languages/Српски.ini
@@ -458,7 +458,7 @@ PARTY_WIN_LEGEND_CONTINUE=Nazad u glavni meni
 
 PARTY_ROUND=Runda
 PARTY_ROUND_WINNER=Pobednik
-PARTY_NOTPLAYEDYET=Nije jos igrao
+;TODO: PARTY_NOTPLAYEDYET=To be determined
 PARTY_NOBODY=Niko
 NEXT_ROUND=Sledeca runda:
 
