--- a/game/languages/日本語.ini
+++ b/game/languages/日本語.ini
@@ -458,7 +458,7 @@ PARTY_WIN_LEGEND_CONTINUE=メイン・メニューへ
 
 PARTY_ROUND=ラウンド
 PARTY_ROUND_WINNER=勝者
-PARTY_NOTPLAYEDYET=まだ歌ってない
+;TODO: PARTY_NOTPLAYEDYET=To be determined
 PARTY_NOBODY=誰もいない
 NEXT_ROUND=次のラウンド：
 
