--- a/game/languages/普通话.ini
+++ b/game/languages/普通话.ini
@@ -458,7 +458,7 @@ PARTY_WIN_LEGEND_CONTINUE=返回主菜单
 
 PARTY_ROUND=回合
 PARTY_ROUND_WINNER=赢家
-PARTY_NOTPLAYEDYET=尚未游戏
+;TODO: PARTY_NOTPLAYEDYET=To be determined
 PARTY_NOBODY=空缺
 NEXT_ROUND=下一回合：
 
