--- a/game/languages/Galego.ini
+++ b/game/languages/Galego.ini
@@ -413,6 +413,7 @@ SONG_MENU_ADD_SONG=Engadir canción
 SONG_MENU_DELETE_SONG=Eliminar canción
 SONG_MENU_START_MEDLEY=Cantar!
 SONG_MENU_START_5_MEDLEY=Cantar %0:d cancións!
+;TODO: SONG_MENU_MUTE_VOICE=Mute voice
 
 SONG_MENU_NAME_SORTING=Menu ordear
 SONG_MENU_SORTING_APPLY=Aplicar
