--- a/game/languages/Lëtzebuergesch.ini
+++ b/game/languages/Lëtzebuergesch.ini
@@ -413,6 +413,7 @@ SONG_MENU_ADD_SONG=Lidd bäifügen
 SONG_MENU_DELETE_SONG=Lidd läschen
 ;TODO: SONG_MENU_START_MEDLEY=Sing!
 ;TODO: SONG_MENU_START_5_MEDLEY=Sing %0:d songs!
+;TODO: SONG_MENU_MUTE_VOICE=Mute voice
 
 ;TODO: SONG_MENU_NAME_SORTING=Sort menu
 ;TODO: SONG_MENU_SORTING_APPLY=Apply
