--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -413,6 +413,7 @@ SONG_MENU_ADD_SONG=Hozzáadás
 SONG_MENU_DELETE_SONG=Törlés
 SONG_MENU_START_MEDLEY=Éneklés
 SONG_MENU_START_5_MEDLEY=Énekelj %0:d Dalt!
+;TODO: SONG_MENU_MUTE_VOICE=Mute voice
 
 SONG_MENU_NAME_SORTING=Rendezés Menü
 SONG_MENU_SORTING_APPLY=Rendben
