--- a/game/languages/Slovenský.ini
+++ b/game/languages/Slovenský.ini
@@ -413,6 +413,7 @@ SONG_MENU_ADD_SONG_TO_LIST=Pridať skladbu do zoznamu
 SONG_MENU_DELETE_SONG=Odstrániť skladbu
 SONG_MENU_START_MEDLEY=Spievajte!
 SONG_MENU_START_5_MEDLEY=Zaspievajte %0:d piesní!
+;TODO: SONG_MENU_MUTE_VOICE=Mute voice
 
 SONG_MENU_NAME_SORTING=Ponuka triedenia
 SONG_MENU_SORTING_APPLY=Použiť
