--- a/game/languages/Català.ini
+++ b/game/languages/Català.ini
@@ -413,6 +413,7 @@ SONG_MENU_ADD_SONG_TO_LIST=Afegeix una cançó a la llista
 SONG_MENU_DELETE_SONG=Esborrar Cançó
 SONG_MENU_START_MEDLEY=Canta !
 SONG_MENU_START_5_MEDLEY=Canta %0:d cançons!
+;TODO: SONG_MENU_MUTE_VOICE=Mute voice
 
 SONG_MENU_NAME_SORTING=Menú d’ordenació
 SONG_MENU_SORTING_APPLY=Aplicar
