--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -413,6 +413,7 @@ SONG_MENU_ADD_SONG_TO_LIST=Lied zur Liste hinzufügen
 SONG_MENU_DELETE_SONG=Song löschen
 SONG_MENU_START_MEDLEY=Singen!
 SONG_MENU_START_5_MEDLEY=%0:d Songs singen!
+;TODO: SONG_MENU_MUTE_VOICE=Mute voice
 
 SONG_MENU_NAME_SORTING=Sortierungsmenü
 SONG_MENU_SORTING_APPLY=Anwenden
