--- a/game/languages/Eesti keel.ini
+++ b/game/languages/Eesti keel.ini
@@ -413,6 +413,7 @@ SONG_MENU_ADD_SONG_TO_LIST=Lisa laul nimekirja
 SONG_MENU_DELETE_SONG=Kustuta laul
 SONG_MENU_START_MEDLEY=Laula!
 SONG_MENU_START_5_MEDLEY=Laula %0:d laule!
+;TODO: SONG_MENU_MUTE_VOICE=Mute voice
 
 SONG_MENU_NAME_SORTING=Sorteeri menüüd
 SONG_MENU_SORTING_APPLY=Sisesta
