--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -413,6 +413,7 @@ SONG_MENU_ADD_SONG_TO_LIST=Añadir canción a la lista
 SONG_MENU_DELETE_SONG=Eliminar canción
 SONG_MENU_START_MEDLEY=Cantar
 SONG_MENU_START_5_MEDLEY=Cantar %0:d canciones al azar
+SONG_MENU_MUTE_VOICE=Silenciar voz
 
 SONG_MENU_NAME_SORTING=Menu ordenar
 SONG_MENU_SORTING_APPLY=Aplicar
