--- a/game/languages/Gàidhlig.ini
+++ b/game/languages/Gàidhlig.ini
@@ -413,6 +413,7 @@ SONG_MENU_ADD_SONG=Cuir òran ris
 SONG_MENU_DELETE_SONG=Sguab às an òran
 SONG_MENU_START_MEDLEY=Seinn!
 SONG_MENU_START_5_MEDLEY=Seinn %0:d òra(i)n!
+;TODO: SONG_MENU_MUTE_VOICE=Mute voice
 
 SONG_MENU_NAME_SORTING=Clàr-taice seòrsachaidh
 SONG_MENU_SORTING_APPLY=Cuir an sàs
