--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -413,6 +413,7 @@ SONG_MENU_ADD_SONG=Aggiungi canzone
 SONG_MENU_DELETE_SONG=Cancella canzone
 SONG_MENU_START_MEDLEY=Canta!
 SONG_MENU_START_5_MEDLEY=Canta %0:d Canzoni!
+;TODO: SONG_MENU_MUTE_VOICE=Mute voice
 
 SONG_MENU_NAME_SORTING=Menu genere
 SONG_MENU_SORTING_APPLY=Applica
