--- a/game/languages/Português.ini
+++ b/game/languages/Português.ini
@@ -413,6 +413,7 @@ SONG_MENU_ADD_SONG=Adicionar Canção
 SONG_MENU_DELETE_SONG=Apagar Canção
 SONG_MENU_START_MEDLEY=Cantar!
 SONG_MENU_START_5_MEDLEY=Cantar %0:d canções!
+;TODO: SONG_MENU_MUTE_VOICE=Mute voice
 
 SONG_MENU_NAME_SORTING=Menu Ordenação
 SONG_MENU_SORTING_APPLY=Aplicar
