Added translation for vocal remover

--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -414,6 +414,7 @@ SONG_MENU_DELETE_SONG=Song löschen
 SONG_MENU_START_MEDLEY=Singen!
 SONG_MENU_START_5_MEDLEY=%0:d Songs singen!
 ;TODO: SONG_MENU_MUTE_VOICE=Mute voice
+;TODO: SONG_MENU_RESUME_VOICE=Resume Voice
 
 SONG_MENU_NAME_SORTING=Sortierungsmenü
 SONG_MENU_SORTING_APPLY=Anwenden
