--- a/game/languages/Eesti keel.ini
+++ b/game/languages/Eesti keel.ini
@@ -414,6 +414,7 @@ SONG_MENU_DELETE_SONG=Kustuta laul
 SONG_MENU_START_MEDLEY=Laula!
 SONG_MENU_START_5_MEDLEY=Laula %0:d laule!
 ;TODO: SONG_MENU_MUTE_VOICE=Mute voice
+;TODO: SONG_MENU_RESUME_VOICE=Resume Voice
 
 SONG_MENU_NAME_SORTING=Sorteeri menüüd
 SONG_MENU_SORTING_APPLY=Sisesta
