--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -413,7 +413,8 @@ SONG_MENU_ADD_SONG_TO_LIST=Add song to the list
 SONG_MENU_DELETE_SONG=Delete song
 SONG_MENU_START_MEDLEY=Sing!
 SONG_MENU_START_5_MEDLEY=Sing %0:d songs!
-SONG_MENU_MUTE_VOICE=Mute voice 
+SONG_MENU_MUTE_VOICE=Mute voice
+SONG_MENU_RESUME_VOICE=Resume Voice
 
 SONG_MENU_NAME_SORTING=Sort menu
 SONG_MENU_SORTING_APPLY=Apply
