--- a/game/languages/Nederlands.ini
+++ b/game/languages/Nederlands.ini
@@ -413,6 +413,8 @@ SONG_MENU_ADD_SONG=Voeg een liedje toe
 SONG_MENU_DELETE_SONG=Verwijder Liedje
 SONG_MENU_START_MEDLEY=Zingen!
 SONG_MENU_START_5_MEDLEY=Zingen %0:d lied!
+;TODO: SONG_MENU_MUTE_VOICE=Mute voice
+;TODO: SONG_MENU_RESUME_VOICE=Resume Voice
 
 ;TODO: SONG_MENU_NAME_SORTING=Sort menu
 ;TODO: SONG_MENU_SORTING_APPLY=Apply
