--- a/game/languages/Slovenský.ini
+++ b/game/languages/Slovenský.ini
@@ -414,6 +414,7 @@ SONG_MENU_DELETE_SONG=Odstrániť skladbu
 SONG_MENU_START_MEDLEY=Spievajte!
 SONG_MENU_START_5_MEDLEY=Zaspievajte %0:d piesní!
 ;TODO: SONG_MENU_MUTE_VOICE=Mute voice
+;TODO: SONG_MENU_RESUME_VOICE=Resume Voice
 
 SONG_MENU_NAME_SORTING=Ponuka triedenia
 SONG_MENU_SORTING_APPLY=Použiť
