--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -414,6 +414,7 @@ SONG_MENU_DELETE_SONG=Supprimer la chanson
 SONG_MENU_START_MEDLEY=Chantez !
 SONG_MENU_START_5_MEDLEY=Chantez %0:d chansons !
 ;TODO: SONG_MENU_MUTE_VOICE=Mute voice
+;TODO: SONG_MENU_RESUME_VOICE=Resume Voice
 
 SONG_MENU_NAME_SORTING=Trier...
 SONG_MENU_SORTING_APPLY=Appliquer
