--- a/game/languages/Polski.ini
+++ b/game/languages/Polski.ini
@@ -414,6 +414,7 @@ SONG_MENU_DELETE_SONG=Usuń piosenkę
 SONG_MENU_START_MEDLEY=Śpiewaj!
 SONG_MENU_START_5_MEDLEY=Śpiewaj %0:d piosenek!
 ;TODO: SONG_MENU_MUTE_VOICE=Mute voice
+;TODO: SONG_MENU_RESUME_VOICE=Resume Voice
 
 SONG_MENU_NAME_SORTING=Menu sortowania
 SONG_MENU_SORTING_APPLY=Zastosuj
