--- a/game/languages/Ελληνικά.ini
+++ b/game/languages/Ελληνικά.ini
@@ -414,6 +414,7 @@ SONG_MENU_DELETE_SONG=Διέγραψε τραγούδι
 ;TODO: SONG_MENU_START_MEDLEY=Sing!
 ;TODO: SONG_MENU_START_5_MEDLEY=Sing %0:d songs!
 ;TODO: SONG_MENU_MUTE_VOICE=Mute voice
+;TODO: SONG_MENU_RESUME_VOICE=Resume Voice
 
 ;TODO: SONG_MENU_NAME_SORTING=Sort menu
 ;TODO: SONG_MENU_SORTING_APPLY=Apply
