Added new compact list mode

--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -62,6 +62,7 @@ OPTION_VALUE_CHESSBOARD=Ajedrez
 OPTION_VALUE_CAROUSEL=Diapositiva
 OPTION_VALUE_SLOT_MACHINE=Máquina tragaperras
 OPTION_VALUE_LIST=Lista
+OPTION_VALUE_COMPACT_LIST=Lista compacta
 OPTION_VALUE_MOSAIC=Baldosas
 
 OPTION_VALUE_ON=Sí
@@ -87,7 +88,7 @@ SING_OPTIONS_GRAPHICS_EFFECTSING=Efectos al cantar
 SING_OPTIONS_GRAPHICS_VISUALIZER=Visualización
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Tamaño del video
 
-SING_OPTIONS_GRAPHICS_FULLSCREEN_DESC=Alternar entre pantalla completa o modo ventana 
+SING_OPTIONS_GRAPHICS_FULLSCREEN_DESC=Alternar entre pantalla completa o modo ventana
 SING_OPTIONS_GRAPHICS_RESOLUTION_DESC=Cambiar el tamaño de la ventana
 SING_OPTIONS_GRAPHICS_SCREENFADE_DESC=Añadir efectos de desvanecimiento al cambiar de menú
 SING_OPTIONS_GRAPHICS_EFFECTSING_DESC=Añadir efectos al cantar en notas doradas
@@ -294,7 +295,7 @@ SING_OPTIONS_WEBCAM_FPS_DESC=Muestra los fotogramas por segundos de la cámara
 SING_OPTIONS_WEBCAM_FLIP_DESC=Voltear imagen horizontalmente
 SING_OPTIONS_WEBCAM_BRIGHTNESS_DESC=Ajusta el brillo de la imagen
 SING_OPTIONS_WEBCAM_SATURATION_DESC=Ajusta la intensidad de color
-SING_OPTIONS_WEBCAM_HUE_DESC=Grado de color de la imagen 
+SING_OPTIONS_WEBCAM_HUE_DESC=Grado de color de la imagen
 SING_OPTIONS_WEBCAM_EFFECT_DESC=Aplica un filtro a la imagen
 
 SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Sí
