--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -62,6 +62,7 @@ OPTION_VALUE_CHESSBOARD=Raster
 OPTION_VALUE_CAROUSEL=Karussell
 OPTION_VALUE_SLOT_MACHINE=Walze
 OPTION_VALUE_LIST=Liste
+;TODO: OPTION_VALUE_COMPACT_LIST=Compact list
 OPTION_VALUE_MOSAIC=Kacheln
 
 OPTION_VALUE_ON=An
@@ -87,7 +88,7 @@ SING_OPTIONS_GRAPHICS_EFFECTSING=Singeffekte
 SING_OPTIONS_GRAPHICS_VISUALIZER=Visualisierung
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Videogröße
 
-;TODO: SING_OPTIONS_GRAPHICS_FULLSCREEN_DESC=Toggle between full screen or windows mode 
+;TODO: SING_OPTIONS_GRAPHICS_FULLSCREEN_DESC=Toggle between full screen or windows mode
 ;TODO: SING_OPTIONS_GRAPHICS_RESOLUTION_DESC=Change window size
 ;TODO: SING_OPTIONS_GRAPHICS_SCREENFADE_DESC=Add fading effects when changing menus
 ;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING_DESC=Add sing effects in golden notes
@@ -195,7 +196,7 @@ SING_OPTIONS_ADVANCED_TOPSCORES=Höchstpunktzahlen
 ;TODO: SING_OPTIONS_ADVANCED_ONSONGCLICK_DESC=Choose what to do after song selection
 ;TODO: SING_OPTIONS_ADVANCED_ASKBEFOREEXIT_DESC=Confirm when exiting the game
 ;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP_DESC=Show menu when selecting a song in party mode
-;TODO: SING_OPTIONS_ADVANCED_TOPSCORES_DESC=Displays a player's top 5 scores 
+;TODO: SING_OPTIONS_ADVANCED_TOPSCORES_DESC=Displays a player's top 5 scores
 
 OPTION_VALUE_ALL=Alle
 OPTION_VALUE_PLAYER=Spieler
@@ -294,7 +295,7 @@ SING_OPTIONS_WEBCAM_PREVIEW=Voransicht aktivieren
 ;TODO: SING_OPTIONS_WEBCAM_FLIP_DESC=Flip image horizontally
 ;TODO: SING_OPTIONS_WEBCAM_BRIGHTNESS_DESC=Adjusts image brightness
 ;TODO: SING_OPTIONS_WEBCAM_SATURATION_DESC=Adjusts color intensity
-;TODO: SING_OPTIONS_WEBCAM_HUE_DESC=Image color grade 
+;TODO: SING_OPTIONS_WEBCAM_HUE_DESC=Image color grade
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_DESC=Apply a filter to the image
 
 SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Vorschau aktivieren
