--- a/game/languages/Eesti keel.ini
+++ b/game/languages/Eesti keel.ini
@@ -62,6 +62,7 @@ OPTION_VALUE_CHESSBOARD=Malelaud
 OPTION_VALUE_CAROUSEL=Karusell
 OPTION_VALUE_SLOT_MACHINE=Mänguautomaat
 OPTION_VALUE_LIST=Nimekiri
+;TODO: OPTION_VALUE_COMPACT_LIST=Compact list
 OPTION_VALUE_MOSAIC=Plaat
 
 OPTION_VALUE_ON=Sisse
@@ -87,7 +88,7 @@ SING_OPTIONS_GRAPHICS_EFFECTSING=Laulmise efektid
 SING_OPTIONS_GRAPHICS_VISUALIZER=Visualiseerimine
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Filmi suurus
 
-;TODO: SING_OPTIONS_GRAPHICS_FULLSCREEN_DESC=Toggle between full screen or windows mode 
+;TODO: SING_OPTIONS_GRAPHICS_FULLSCREEN_DESC=Toggle between full screen or windows mode
 ;TODO: SING_OPTIONS_GRAPHICS_RESOLUTION_DESC=Change window size
 ;TODO: SING_OPTIONS_GRAPHICS_SCREENFADE_DESC=Add fading effects when changing menus
 ;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING_DESC=Add sing effects in golden notes
@@ -195,7 +196,7 @@ SING_OPTIONS_ADVANCED_TOPSCORES=Kõrgemad skoorid
 ;TODO: SING_OPTIONS_ADVANCED_ONSONGCLICK_DESC=Choose what to do after song selection
 ;TODO: SING_OPTIONS_ADVANCED_ASKBEFOREEXIT_DESC=Confirm when exiting the game
 ;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP_DESC=Show menu when selecting a song in party mode
-;TODO: SING_OPTIONS_ADVANCED_TOPSCORES_DESC=Displays a player's top 5 scores 
+;TODO: SING_OPTIONS_ADVANCED_TOPSCORES_DESC=Displays a player's top 5 scores
 
 OPTION_VALUE_ALL=Kõik
 OPTION_VALUE_PLAYER=Mängija
@@ -294,7 +295,7 @@ SING_OPTIONS_WEBCAM_PREVIEW=Aktiveeri eelvaade
 ;TODO: SING_OPTIONS_WEBCAM_FLIP_DESC=Flip image horizontally
 ;TODO: SING_OPTIONS_WEBCAM_BRIGHTNESS_DESC=Adjusts image brightness
 ;TODO: SING_OPTIONS_WEBCAM_SATURATION_DESC=Adjusts color intensity
-;TODO: SING_OPTIONS_WEBCAM_HUE_DESC=Image color grade 
+;TODO: SING_OPTIONS_WEBCAM_HUE_DESC=Image color grade
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_DESC=Apply a filter to the image
 
 SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Tühista eelvaade
