--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -62,6 +62,7 @@ OPTION_VALUE_CHESSBOARD=Chessboard
 OPTION_VALUE_CAROUSEL=Carousel
 OPTION_VALUE_SLOT_MACHINE=Slot machine
 OPTION_VALUE_LIST=List
+OPTION_VALUE_COMPACT_LIST=Compact list
 OPTION_VALUE_MOSAIC=Tile
 
 OPTION_VALUE_ON=On
@@ -87,7 +88,7 @@ SING_OPTIONS_GRAPHICS_EFFECTSING=Sing effects
 SING_OPTIONS_GRAPHICS_VISUALIZER=Visualization
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Movie size
 
-SING_OPTIONS_GRAPHICS_FULLSCREEN_DESC=Toggle between full screen or windows mode 
+SING_OPTIONS_GRAPHICS_FULLSCREEN_DESC=Toggle between full screen or windows mode
 SING_OPTIONS_GRAPHICS_RESOLUTION_DESC=Change window size
 SING_OPTIONS_GRAPHICS_SCREENFADE_DESC=Add fading effects when changing menus
 SING_OPTIONS_GRAPHICS_EFFECTSING_DESC=Add sing effects in golden notes
@@ -195,7 +196,7 @@ SING_OPTIONS_ADVANCED_OSCILLOSCOPE_DESC=Displays a voice signal in sing screen
 SING_OPTIONS_ADVANCED_ONSONGCLICK_DESC=Choose what to do after song selection
 SING_OPTIONS_ADVANCED_ASKBEFOREEXIT_DESC=Confirm when exiting the game
 SING_OPTIONS_ADVANCED_PARTYPOPUP_DESC=Show menu when selecting a song in party mode
-SING_OPTIONS_ADVANCED_TOPSCORES_DESC=Displays a player's top 5 scores 
+SING_OPTIONS_ADVANCED_TOPSCORES_DESC=Displays a player's top 5 scores
 
 OPTION_VALUE_ALL=All
 OPTION_VALUE_PLAYER=Player
@@ -294,7 +295,7 @@ SING_OPTIONS_WEBCAM_FPS_DESC=Displays the frames per second of the camera
 SING_OPTIONS_WEBCAM_FLIP_DESC=Flip image horizontally
 SING_OPTIONS_WEBCAM_BRIGHTNESS_DESC=Adjusts image brightness
 SING_OPTIONS_WEBCAM_SATURATION_DESC=Adjusts color intensity
-SING_OPTIONS_WEBCAM_HUE_DESC=Image color grade 
+SING_OPTIONS_WEBCAM_HUE_DESC=Image color grade
 SING_OPTIONS_WEBCAM_EFFECT_DESC=Apply a filter to the image
 
 SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Enable preview
