Added new training difficulty to check only note accuracy and no tones (like rap notes)

--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -37,6 +37,7 @@ SING_PLAYER_AVATAR=Wähle deinen Avatar
 OPTION_VALUE_EASY=Einfach
 OPTION_VALUE_MEDIUM=Mittel
 OPTION_VALUE_HARD=Schwierig
+;TODO: OPTION_VALUE_TRAINING=Training
 
 SING_OPTIONS=Optionen
 
