--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -1,4 +1,4 @@
-﻿[Text]
+[Text]
 LANGUAGE=Español
 LANGUAGE_ISO_CODE=es
 
@@ -37,6 +37,7 @@ SING_PLAYER_AVATAR=Selecciona tu avatar
 OPTION_VALUE_EASY=Fácil
 OPTION_VALUE_MEDIUM=Medio
 OPTION_VALUE_HARD=Difícil
+OPTION_VALUE_TRAINING=Entrenamiento
 
 SING_OPTIONS=Opciones
 
