--- a/game/languages/Hrvatski.ini
+++ b/game/languages/Hrvatski.ini
@@ -37,6 +37,7 @@ SING_PLAYER_AVATAR=Odaberite svoj avatar
 OPTION_VALUE_EASY=Lako
 OPTION_VALUE_MEDIUM=Srednje
 OPTION_VALUE_HARD=Teško
+;TODO: OPTION_VALUE_TRAINING=Training
 
 SING_OPTIONS=Opcije
 
