--- a/game/languages/Lietuvių.ini
+++ b/game/languages/Lietuvių.ini
@@ -37,6 +37,7 @@ SING_PLAYER_AVATAR=Pasirinkite savo avatarą
 OPTION_VALUE_EASY=Lengva
 OPTION_VALUE_MEDIUM=Vidutinis
 OPTION_VALUE_HARD=Sunku
+;TODO: OPTION_VALUE_TRAINING=Training
 
 SING_OPTIONS=Galimybės
 
