--- a/game/languages/Lëtzebuergesch.ini
+++ b/game/languages/Lëtzebuergesch.ini
@@ -37,6 +37,7 @@ SING_PLAYER_AVATAR=Wielt Äre Avatar
 OPTION_VALUE_EASY=Einfach
 OPTION_VALUE_MEDIUM=Mëttel
 OPTION_VALUE_HARD=Schwéier
+;TODO: OPTION_VALUE_TRAINING=Training
 
 SING_OPTIONS=Optiounen
 
