--- a/game/languages/Norsk.ini
+++ b/game/languages/Norsk.ini
@@ -37,6 +37,7 @@ SING_PLAYER_AVATAR=Velg avataren din
 OPTION_VALUE_EASY=Lett
 OPTION_VALUE_MEDIUM=Moderat
 OPTION_VALUE_HARD=Vanskelig
+;TODO: OPTION_VALUE_TRAINING=Training
 
 SING_OPTIONS=Innstillinger
 
