--- a/game/languages/Polski.ini
+++ b/game/languages/Polski.ini
@@ -37,6 +37,7 @@ SING_PLAYER_AVATAR=Wybierz swój awatar
 OPTION_VALUE_EASY=Łatwo
 OPTION_VALUE_MEDIUM=Średnio
 OPTION_VALUE_HARD=Trudno
+;TODO: OPTION_VALUE_TRAINING=Training
 
 SING_OPTIONS=Opcje
 
