--- a/game/languages/Pу́сский.ini
+++ b/game/languages/Pу́сский.ini
@@ -37,6 +37,7 @@ SING_PLAYER_AVATAR=Выберите свой аватар
 OPTION_VALUE_EASY=Простой
 OPTION_VALUE_MEDIUM=Средний
 OPTION_VALUE_HARD=Сложный
+;TODO: OPTION_VALUE_TRAINING=Training
 
 SING_OPTIONS=Настройки
 
