--- a/game/languages/Slovenský.ini
+++ b/game/languages/Slovenský.ini
@@ -37,6 +37,7 @@ SING_PLAYER_AVATAR=Vyberte avatara
 OPTION_VALUE_EASY=Ľahká
 OPTION_VALUE_MEDIUM=Stredná
 OPTION_VALUE_HARD=Ťažká
+;TODO: OPTION_VALUE_TRAINING=Training
 
 SING_OPTIONS=Nastavenia
 
