--- a/game/languages/Slovenščina.ini
+++ b/game/languages/Slovenščina.ini
@@ -37,6 +37,7 @@ SING_PLAYER_AVATAR=Izberite svoj avatar
 OPTION_VALUE_EASY=Enostavno
 OPTION_VALUE_MEDIUM=Srednje
 OPTION_VALUE_HARD=Težko
+;TODO: OPTION_VALUE_TRAINING=Training
 
 SING_OPTIONS=Nastavitve
 
