--- a/game/languages/Svenska.ini
+++ b/game/languages/Svenska.ini
@@ -37,6 +37,7 @@ SING_PLAYER_AVATAR=Välj din avatar
 OPTION_VALUE_EASY=Lätt
 OPTION_VALUE_MEDIUM=Medel
 OPTION_VALUE_HARD=Svår
+;TODO: OPTION_VALUE_TRAINING=Training
 
 SING_OPTIONS=Inställningar
 
