--- a/game/languages/Íslenska.ini
+++ b/game/languages/Íslenska.ini
@@ -37,6 +37,7 @@ SING_PLAYER_AVATAR=Veldu avatar þinn
 OPTION_VALUE_EASY=Auðvelt
 OPTION_VALUE_MEDIUM=Miðlungs
 OPTION_VALUE_HARD=Erfitt
+;TODO: OPTION_VALUE_TRAINING=Training
 
 SING_OPTIONS=Stillingar
 
