--- a/game/languages/Ελληνικά.ini
+++ b/game/languages/Ελληνικά.ini
@@ -37,6 +37,7 @@ SING_PLAYER_AVATAR=Επιλέξτε το avatar σας
 OPTION_VALUE_EASY=Εύκολο
 OPTION_VALUE_MEDIUM=Μέτριο
 OPTION_VALUE_HARD=Δύσκολο
+;TODO: OPTION_VALUE_TRAINING=Training
 
 SING_OPTIONS=Επιλογές
 
