--- a/game/languages/Српски.ini
+++ b/game/languages/Српски.ini
@@ -37,6 +37,7 @@ SING_PLAYER_AVATAR=Изаберите свој аватар
 OPTION_VALUE_EASY=Lako
 OPTION_VALUE_MEDIUM=Normalno
 OPTION_VALUE_HARD=Tesko
+;TODO: OPTION_VALUE_TRAINING=Training
 
 SING_OPTIONS=Opcije
 
