--- a/game/languages/日本語.ini
+++ b/game/languages/日本語.ini
@@ -37,6 +37,7 @@ SING_EXIT_DESC=ゲームをやめる
 OPTION_VALUE_EASY=簡単
 OPTION_VALUE_MEDIUM=普通
 OPTION_VALUE_HARD=難しい
+;TODO: OPTION_VALUE_TRAINING=Training
 
 SING_OPTIONS=設定
 
