--- a/game/languages/普通话.ini
+++ b/game/languages/普通话.ini
@@ -37,6 +37,7 @@ SING_EXIT_DESC=退出游戏
 OPTION_VALUE_EASY=简单
 OPTION_VALUE_MEDIUM=中等
 OPTION_VALUE_HARD=困难
+;TODO: OPTION_VALUE_TRAINING=Training
 
 SING_OPTIONS=选项
 
