--- a/game/languages/Català.ini
+++ b/game/languages/Català.ini
@@ -37,6 +37,7 @@ SING_PLAYER_AVATAR=Selecciona el teu avatar
 OPTION_VALUE_EASY=Fàcil
 OPTION_VALUE_MEDIUM=Mitjà
 OPTION_VALUE_HARD=Difícil
+;TODO: OPTION_VALUE_TRAINING=Training
 
 SING_OPTIONS=Opcions
 
