--- a/game/languages/Dansk.ini
+++ b/game/languages/Dansk.ini
@@ -37,6 +37,7 @@ SING_PLAYER_AVATAR=Vælg din avatar
 OPTION_VALUE_EASY=Let
 OPTION_VALUE_MEDIUM=Normal
 OPTION_VALUE_HARD=Svær
+;TODO: OPTION_VALUE_TRAINING=Training
 
 SING_OPTIONS=Indstillinger
 
