--- a/game/languages/Eesti keel.ini
+++ b/game/languages/Eesti keel.ini
@@ -37,6 +37,7 @@ SING_PLAYER_AVATAR=Vali oma avatar
 OPTION_VALUE_EASY=Lihtne
 OPTION_VALUE_MEDIUM=Kesktase
 OPTION_VALUE_HARD=Raske
+;TODO: OPTION_VALUE_TRAINING=Training
 
 SING_OPTIONS=Võimalused
 
