--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -37,6 +37,7 @@ SING_PLAYER_AVATAR=Select your avatar
 OPTION_VALUE_EASY=Easy
 OPTION_VALUE_MEDIUM=Medium
 OPTION_VALUE_HARD=Hard
+OPTION_VALUE_TRAINING=Training
 
 SING_OPTIONS=Options
 
