--- a/game/languages/Euskara.ini
+++ b/game/languages/Euskara.ini
@@ -37,6 +37,7 @@ SING_EXIT_DESC=Jokotik irten
 OPTION_VALUE_EASY=Erraza
 OPTION_VALUE_MEDIUM=Bitartekoa
 OPTION_VALUE_HARD=Zaila
+;TODO: OPTION_VALUE_TRAINING=Training
 
 SING_OPTIONS=Hobespenak
 
