--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -37,6 +37,7 @@ SING_PLAYER_AVATAR=Sélectionnez votre avatar
 OPTION_VALUE_EASY=Facile
 OPTION_VALUE_MEDIUM=Moyen
 OPTION_VALUE_HARD=Difficile
+;TODO: OPTION_VALUE_TRAINING=Training
 
 SING_OPTIONS=Options
 
