--- a/game/languages/Galego.ini
+++ b/game/languages/Galego.ini
@@ -37,6 +37,7 @@ SING_PLAYER_AVATAR=Selecciona o teu avatar
 OPTION_VALUE_EASY=Fácil
 OPTION_VALUE_MEDIUM=Medio
 OPTION_VALUE_HARD=Difícil
+;TODO: OPTION_VALUE_TRAINING=Training
 
 SING_OPTIONS=Opcións
 
