--- a/game/languages/Gàidhlig.ini
+++ b/game/languages/Gàidhlig.ini
@@ -37,6 +37,7 @@ SING_PLAYER_AVATAR=Tagh do avatar
 OPTION_VALUE_EASY=Furasta
 OPTION_VALUE_MEDIUM=Meadhanach
 OPTION_VALUE_HARD=Doirbh
+;TODO: OPTION_VALUE_TRAINING=Training
 
 SING_OPTIONS=Roghainnean
 
