--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -37,6 +37,7 @@ SING_PLAYER_AVATAR=Seleziona il tuo avatar
 OPTION_VALUE_EASY=Facile
 OPTION_VALUE_MEDIUM=Media
 OPTION_VALUE_HARD=Difficile
+;TODO: OPTION_VALUE_TRAINING=Training
 
 SING_OPTIONS=Impostazioni
 
