--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -37,6 +37,7 @@ SING_PLAYER_AVATAR=Válassz egy avatárt
 OPTION_VALUE_EASY=Könnyű
 OPTION_VALUE_MEDIUM=Normál
 OPTION_VALUE_HARD=Nehéz
+;TODO: OPTION_VALUE_TRAINING=Training
 
 SING_OPTIONS=Beállítások
 
