--- a/game/languages/Nederlands.ini
+++ b/game/languages/Nederlands.ini
@@ -37,6 +37,7 @@ SING_PLAYER_AVATAR=Selecteer je avatar
 OPTION_VALUE_EASY=Gemakkelijk
 OPTION_VALUE_MEDIUM=Gemiddeld
 OPTION_VALUE_HARD=Moeilijk
+;TODO: OPTION_VALUE_TRAINING=Training
 
 SING_OPTIONS=Opties
 
