--- a/game/languages/Português.ini
+++ b/game/languages/Português.ini
@@ -37,6 +37,7 @@ SING_PLAYER_AVATAR=Selecione seu avatar
 OPTION_VALUE_EASY=Fácil
 OPTION_VALUE_MEDIUM=Médio
 OPTION_VALUE_HARD=Difícil
+;TODO: OPTION_VALUE_TRAINING=Training
 
 SING_OPTIONS=Opções
 
