--- a/game/languages/Română.ini
+++ b/game/languages/Română.ini
@@ -37,6 +37,7 @@ SING_PLAYER_AVATAR=Selectați avatarul dvs
 OPTION_VALUE_EASY=Uşor
 OPTION_VALUE_MEDIUM=Mediu
 OPTION_VALUE_HARD=Greu
+;TODO: OPTION_VALUE_TRAINING=Training
 
 SING_OPTIONS=Opţiuni
 
