--- a/game/languages/Suomi.ini
+++ b/game/languages/Suomi.ini
@@ -37,6 +37,7 @@ SING_PLAYER_AVATAR=Valitse avatar
 OPTION_VALUE_EASY=Helppo
 OPTION_VALUE_MEDIUM=Keskitaso
 OPTION_VALUE_HARD=Vaikea
+;TODO: OPTION_VALUE_TRAINING=Training
 
 SING_OPTIONS=Asetukset
 
