--- a/game/languages/Čeština.ini
+++ b/game/languages/Čeština.ini
@@ -37,6 +37,7 @@ SING_PLAYER_AVATAR=Vyberte svůj avatar
 OPTION_VALUE_EASY=Snadná
 OPTION_VALUE_MEDIUM=Střední
 OPTION_VALUE_HARD=Těžká
+;TODO: OPTION_VALUE_TRAINING=Training
 
 SING_OPTIONS=Možnosti
 
