Fixed auto player slide and moved all slides options from ini to screen options network

--- a/game/languages/Català.ini
+++ b/game/languages/Català.ini
@@ -230,7 +230,7 @@ OPTION_PLAYER_3=Jugador 3
 OPTION_PLAYER_4=Jugador 4
 OPTION_PLAYER_5=Jugador 5
 OPTION_PLAYER_6=Jugador 6
-OPTION_ALL_PLAYERS=Tot
+OPTION_PLAYER_ALL=Tot
 OPTION_ALL_SCORES=Tot
 OPTION_VALUE_SAVE=Desa
 OPTION_VALUE_SEND=Enviar
