--- a/game/languages/Dansk.ini
+++ b/game/languages/Dansk.ini
@@ -230,7 +230,7 @@ OPTION_PLAYER_3=Spiller 3
 OPTION_PLAYER_4=Spiller 4
 OPTION_PLAYER_5=Spiller 5
 OPTION_PLAYER_6=Spiller 6
-OPTION_ALL_PLAYERS=Alle
+OPTION_PLAYER_ALL=Alle
 OPTION_ALL_SCORES=Alle
 OPTION_VALUE_SAVE=Gemme
 OPTION_VALUE_SEND=Sende
