--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -230,7 +230,7 @@ OPTION_PLAYER_3=Spieler 3
 OPTION_PLAYER_4=Spieler 4
 OPTION_PLAYER_5=Spieler 5
 OPTION_PLAYER_6=Spieler 6
-OPTION_ALL_PLAYERS=Allem
+OPTION_PLAYER_ALL=Allem
 OPTION_ALL_SCORES=Allem
 OPTION_VALUE_SAVE=Speichern
 OPTION_VALUE_SEND=Senden
