--- a/game/languages/Eesti keel.ini
+++ b/game/languages/Eesti keel.ini
@@ -230,7 +230,7 @@ OPTION_PLAYER_3=Mängija 3
 OPTION_PLAYER_4=Mängija 4
 OPTION_PLAYER_5=Mängija 5
 OPTION_PLAYER_6=Mängija 6
-OPTION_ALL_PLAYERS=Kõik
+OPTION_PLAYER_ALL=Kõik
 OPTION_ALL_SCORES=Kõik
 OPTION_VALUE_SAVE=Salvesta
 OPTION_VALUE_SEND=Saada
