--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -230,7 +230,7 @@ OPTION_PLAYER_3=Player 3
 OPTION_PLAYER_4=Player 4
 OPTION_PLAYER_5=Player 5
 OPTION_PLAYER_6=Player 6
-OPTION_ALL_PLAYERS=All
+OPTION_PLAYER_ALL=All
 OPTION_ALL_SCORES=All
 OPTION_VALUE_SAVE=Save
 OPTION_VALUE_SEND=Send
