--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -230,7 +230,7 @@ OPTION_PLAYER_3=Jugador 3
 OPTION_PLAYER_4=Jugador 4
 OPTION_PLAYER_5=Jugador 5
 OPTION_PLAYER_6=Jugador 6
-OPTION_ALL_PLAYERS=Todos
+OPTION_PLAYER_ALL=Todos
 OPTION_ALL_SCORES=Todas
 OPTION_VALUE_SAVE=Guardar
 OPTION_VALUE_SEND=Enviar
