--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -230,7 +230,7 @@ OPTION_PLAYER_3=Joueur 3
 OPTION_PLAYER_4=Joueur 4
 OPTION_PLAYER_5=Joueur 5
 OPTION_PLAYER_6=Joueur 6
-OPTION_ALL_PLAYERS=Tout
+OPTION_PLAYER_ALL=Tout
 OPTION_ALL_SCORES=Tout
 OPTION_VALUE_SAVE=Enregistrer
 OPTION_VALUE_SEND=Envoyer
