--- a/game/languages/Galego.ini
+++ b/game/languages/Galego.ini
@@ -230,7 +230,7 @@ OPTION_PLAYER_3=Xogador 3
 OPTION_PLAYER_4=Xogador 4
 OPTION_PLAYER_5=Xogador 5
 OPTION_PLAYER_6=Xogador 6
-OPTION_ALL_PLAYERS=Todos
+OPTION_PLAYER_ALL=Todos
 OPTION_ALL_SCORES=Todas
 OPTION_VALUE_SAVE=Gardar
 OPTION_VALUE_SEND=Enviar
