--- a/game/languages/Gàidhlig.ini
+++ b/game/languages/Gàidhlig.ini
@@ -230,7 +230,7 @@ OPTION_PLAYER_3=Cluicheadair 3
 OPTION_PLAYER_4=Cluicheadair 4
 OPTION_PLAYER_5=Cluicheadair 5
 OPTION_PLAYER_6=Cluicheadair 6
-OPTION_ALL_PLAYERS=Na h-uile
+OPTION_PLAYER_ALL=Na h-uile
 OPTION_ALL_SCORES=Na h-uile
 OPTION_VALUE_SAVE=Sàbhail
 OPTION_VALUE_SEND=Cuir a-null
