--- a/game/languages/Hrvatski.ini
+++ b/game/languages/Hrvatski.ini
@@ -230,7 +230,7 @@ OPTION_PLAYER_3=Igrač 3
 OPTION_PLAYER_4=Igrač 4
 OPTION_PLAYER_5=Igrač 5
 OPTION_PLAYER_6=Igrač 6
-OPTION_ALL_PLAYERS=Sve
+OPTION_PLAYER_ALL=Sve
 OPTION_ALL_SCORES=Sve
 OPTION_VALUE_SAVE=Uštedjeti
 OPTION_VALUE_SEND=Poslati
