--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -230,7 +230,7 @@ OPTION_PLAYER_3=Giocatore 3
 OPTION_PLAYER_4=Giocatore 4
 OPTION_PLAYER_5=Giocatore 5
 OPTION_PLAYER_6=Giocatore 6
-OPTION_ALL_PLAYERS=Tutti i giocatori
+OPTION_PLAYER_ALL=Tutti i giocatori
 OPTION_ALL_SCORES=Tutti i punteggi
 OPTION_VALUE_SAVE=Salva
 OPTION_VALUE_SEND=Invia
