--- a/game/languages/Lietuvių.ini
+++ b/game/languages/Lietuvių.ini
@@ -230,7 +230,7 @@ OPTION_PLAYER_3=Žaidėjas 3
 OPTION_PLAYER_4=Žaidėjas 4
 OPTION_PLAYER_5=Žaidėjas 5
 OPTION_PLAYER_6=Žaidėjas 6
-;TODO: OPTION_ALL_PLAYERS=All
+;TODO: OPTION_PLAYER_ALL=All
 ;TODO: OPTION_ALL_SCORES=All
 ;TODO: OPTION_VALUE_SAVE=Save
 OPTION_VALUE_SEND=Siųsti
