--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -230,7 +230,7 @@ OPTION_PLAYER_3=Játékos 3
 OPTION_PLAYER_4=Játékos 4
 OPTION_PLAYER_5=Játékos 5
 OPTION_PLAYER_6=Játékos 6
-OPTION_ALL_PLAYERS=Összes
+OPTION_PLAYER_ALL=Összes
 OPTION_ALL_SCORES=Összes
 OPTION_VALUE_SAVE=Mentés
 OPTION_VALUE_SEND=Küldés
