--- a/game/languages/Nederlands.ini
+++ b/game/languages/Nederlands.ini
@@ -230,7 +230,7 @@ OPTION_PLAYER_3=Speler 3
 OPTION_PLAYER_4=Speler 4
 OPTION_PLAYER_5=Speler 5
 OPTION_PLAYER_6=Speler 6
-OPTION_ALL_PLAYERS=Alles
+OPTION_PLAYER_ALL=Alles
 OPTION_ALL_SCORES=Alles
 ;TODO: OPTION_VALUE_SAVE=Save
 OPTION_VALUE_SEND=Sturen
