--- a/game/languages/Norsk.ini
+++ b/game/languages/Norsk.ini
@@ -230,7 +230,7 @@ OPTION_PLAYER_3=Spiller 3
 OPTION_PLAYER_4=Spiller 4
 OPTION_PLAYER_5=Spiller 5
 OPTION_PLAYER_6=Spiller 6
-OPTION_ALL_PLAYERS=Alt
+OPTION_PLAYER_ALL=Alt
 OPTION_ALL_SCORES=Alt
 ;TODO: OPTION_VALUE_SAVE=Save
 ;TODO: OPTION_VALUE_SEND=Send
