--- a/game/languages/Português.ini
+++ b/game/languages/Português.ini
@@ -230,7 +230,7 @@ OPTION_PLAYER_3=Jogador 3
 OPTION_PLAYER_4=Jogador 4
 OPTION_PLAYER_5=Jogador 5
 OPTION_PLAYER_6=Jogador 6
-OPTION_ALL_PLAYERS=Todos
+OPTION_PLAYER_ALL=Todos
 OPTION_ALL_SCORES=Todas
 OPTION_VALUE_SAVE=Guardar
 OPTION_VALUE_SEND=Enviar
