--- a/game/languages/Pу́сский.ini
+++ b/game/languages/Pу́сский.ini
@@ -230,7 +230,7 @@ OPTION_PLAYER_3=игрок 3
 OPTION_PLAYER_4=игрок 4
 OPTION_PLAYER_5=игрок 5
 OPTION_PLAYER_6=игрок 6
-OPTION_ALL_PLAYERS=Всё
+OPTION_PLAYER_ALL=Всё
 OPTION_ALL_SCORES=Всё
 ;TODO: OPTION_VALUE_SAVE=Save
 ;TODO: OPTION_VALUE_SEND=Send
