--- a/game/languages/Română.ini
+++ b/game/languages/Română.ini
@@ -230,7 +230,7 @@ OPTION_PLAYER_3=Jucător 3
 OPTION_PLAYER_4=Jucător 4
 OPTION_PLAYER_5=Jucător 5
 OPTION_PLAYER_6=Jucător 6
-OPTION_ALL_PLAYERS=Toate
+OPTION_PLAYER_ALL=Toate
 OPTION_ALL_SCORES=Toate
 ;TODO: OPTION_VALUE_SAVE=Save
 ;TODO: OPTION_VALUE_SEND=Send
