--- a/game/languages/Slovenský.ini
+++ b/game/languages/Slovenský.ini
@@ -230,7 +230,7 @@ OPTION_PLAYER_3=Hráč 3
 OPTION_PLAYER_4=Hráč 4
 OPTION_PLAYER_5=Hráč 5
 OPTION_PLAYER_6=Hráč 6
-OPTION_ALL_PLAYERS=Všetci hráči
+OPTION_PLAYER_ALL=Všetci hráči
 OPTION_ALL_SCORES=Všetky skóre
 OPTION_VALUE_SAVE=Uložiť
 OPTION_VALUE_SEND=Odoslať
