--- a/game/languages/Slovenščina.ini
+++ b/game/languages/Slovenščina.ini
@@ -230,7 +230,7 @@ OPTION_PLAYER_3=Igralec 3
 OPTION_PLAYER_4=Igralec 4
 OPTION_PLAYER_5=Igralec 5
 OPTION_PLAYER_6=Igralec 6
-OPTION_ALL_PLAYERS=Vse
+OPTION_PLAYER_ALL=Vse
 OPTION_ALL_SCORES=Vse
 ;TODO: OPTION_VALUE_SAVE=Save
 ;TODO: OPTION_VALUE_SEND=Send
