--- a/game/languages/Svenska.ini
+++ b/game/languages/Svenska.ini
@@ -230,7 +230,7 @@ OPTION_PLAYER_3=Spelare 3
 OPTION_PLAYER_4=Spelare 4
 OPTION_PLAYER_5=Spelare 5
 OPTION_PLAYER_6=Spelare 6
-OPTION_ALL_PLAYERS=Alla
+OPTION_PLAYER_ALL=Alla
 OPTION_ALL_SCORES=Alla
 ;TODO: OPTION_VALUE_SAVE=Save
 ;TODO: OPTION_VALUE_SEND=Send
