--- a/game/languages/Íslenska.ini
+++ b/game/languages/Íslenska.ini
@@ -230,7 +230,7 @@ OPTION_PLAYER_3=Leikmaður 3
 OPTION_PLAYER_4=Leikmaður 4
 OPTION_PLAYER_5=Leikmaður 5
 OPTION_PLAYER_6=Leikmaður 6
-OPTION_ALL_PLAYERS=Öllu
+OPTION_PLAYER_ALL=Öllu
 OPTION_ALL_SCORES=Öllu
 ;TODO: OPTION_VALUE_SAVE=Save
 ;TODO: OPTION_VALUE_SEND=Send
