--- a/game/languages/Čeština.ini
+++ b/game/languages/Čeština.ini
@@ -230,7 +230,7 @@ OPTION_PLAYER_3=Hráč 3
 OPTION_PLAYER_4=Hráč 4
 OPTION_PLAYER_5=Hráč 5
 OPTION_PLAYER_6=Hráč 6
-OPTION_ALL_PLAYERS=Všude
+OPTION_PLAYER_ALL=Všude
 OPTION_ALL_SCORES=Všude
 ;TODO: OPTION_VALUE_SAVE=Save
 ;TODO: OPTION_VALUE_SEND=Send
