--- a/game/languages/Ελληνικά.ini
+++ b/game/languages/Ελληνικά.ini
@@ -230,7 +230,7 @@ OPTION_PLAYER_3=Παίχτης 3
 OPTION_PLAYER_4=Παίχτης 4
 OPTION_PLAYER_5=Παίχτης 5
 OPTION_PLAYER_6=Παίχτης 6
-OPTION_ALL_PLAYERS=Όλα
+OPTION_PLAYER_ALL=Όλα
 OPTION_ALL_SCORES=Όλα
 ;TODO: OPTION_VALUE_SAVE=Save
 ;TODO: OPTION_VALUE_SEND=Send
