--- a/game/languages/Српски.ini
+++ b/game/languages/Српски.ini
@@ -230,7 +230,7 @@ OPTION_PLAYER_3=Играч 3
 OPTION_PLAYER_4=Играч 4
 OPTION_PLAYER_5=Играч 5
 OPTION_PLAYER_6=Играч 6
-OPTION_ALL_PLAYERS=Sve
+OPTION_PLAYER_ALL=Sve
 OPTION_ALL_SCORES=Sve
 ;TODO: OPTION_VALUE_SAVE=Save
 ;TODO: OPTION_VALUE_SEND=Send
