--- a/game/languages/日本語.ini
+++ b/game/languages/日本語.ini
@@ -230,7 +230,7 @@ OPTION_VALUE_ALL=全部
 ;TODO: OPTION_PLAYER_4=Player 4
 ;TODO: OPTION_PLAYER_5=Player 5
 ;TODO: OPTION_PLAYER_6=Player 6
-OPTION_ALL_PLAYERS=全部
+OPTION_PLAYER_ALL=全部
 OPTION_ALL_SCORES=全部
 ;TODO: OPTION_VALUE_SAVE=Save
 ;TODO: OPTION_VALUE_SEND=Send
