--- a/game/languages/普通话.ini
+++ b/game/languages/普通话.ini
@@ -230,7 +230,7 @@ SING_OPTIONS_NETWORK_AUTO_MODE=自动
 ;TODO: OPTION_PLAYER_4=Player 4
 ;TODO: OPTION_PLAYER_5=Player 5
 ;TODO: OPTION_PLAYER_6=Player 6
-OPTION_ALL_PLAYERS=所有
+OPTION_PLAYER_ALL=所有
 OPTION_ALL_SCORES=所有
 ;TODO: OPTION_VALUE_SAVE=Save
 ;TODO: OPTION_VALUE_SEND=Send
