--- a/game/languages/Lëtzebuergesch.ini
+++ b/game/languages/Lëtzebuergesch.ini
@@ -230,7 +230,7 @@ SING_OPTIONS_NETWORK_AUTO_MODE=Automatesch
 ;TODO: OPTION_PLAYER_4=Player 4
 ;TODO: OPTION_PLAYER_5=Player 5
 ;TODO: OPTION_PLAYER_6=Player 6
-OPTION_ALL_PLAYERS=Alles
+OPTION_PLAYER_ALL=Alles
 OPTION_ALL_SCORES=Alles
 ;TODO: OPTION_VALUE_SAVE=Save
 ;TODO: OPTION_VALUE_SEND=Send
